--- a/hacked.html
+++ b/hacked.html
@@ -27,24 +27,28 @@ _Digital vs. Analog_. Non-trivial question. One emergent phenomenon of this bina
 
 
 
-
-<div class="float-right" style="float:none;width:100%;margin-left:0;border:none;padding:0;background:none;">
-    <!-- Primary Image Anchor -->
-    <iframe width="100%" height="250" src="https://www.youtube.com/embed/eikUv6YzmgU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <!-- Symbolic Overlay -->
+<!-- FLOATING VIDEO FRAME -->
+<div class="float-frame float-right">
+    <iframe width="100%" height="250"
+        src="https://www.youtube.com/embed/eikUv6YzmgU"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+    </iframe>
+<!-- MUST BE OUTSIDE THE HTML BLOCK; really? not sure! -->
     <a class="image-bubble layered-icon" href="figures/autism-spectrum-disorder.jpeg" target="_blank" title="Click to magnify">
         <div class="large-icon"></div>
         <div class="small-icon"></div>
     </a>
 
+
 ```{figure} https://www.ledr.com/colours/white.jpg
 ---
 width: 1
 height: 1
-name: figures/cgbest
+name: autism-youtube-ghost
 ---
-_The Specter of Autism_. Conspiratorial Thinking and the Right-Wing Grievance Machine. We are concerned about paranoid mythology. Review the framework above to see where the mythic falls.
+_The Specter of Autism_. Video propaganda and conspiratorial mythology in a fractal age. The figure above does not speak for itself.
 ```
 
-</div>
 </div>
